--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "handlebars": "^4.0.5",
     "hapi": "^13.0.0",
     "hapi-react-views": "^5.0.2",
+    "inert": "^3.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "vision": "^4.0.1"
