--- a/semantic/src/theme.config
+++ b/semantic/src/theme.config
@@ -22,11 +22,11 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'default';
+@button     : 'amazon';
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
-@header     : 'default';
+@header     : 'bookish';
 @icon       : 'default';
 @image      : 'default';
 @input      : 'default';
@@ -42,7 +42,7 @@
 @breadcrumb : 'default';
 @form       : 'default';
 @grid       : 'default';
-@menu       : 'default';
+@menu       : 'github';
 @message    : 'default';
 @table      : 'default';
 
