--- a/package.json
+++ b/package.json
@@ -4,50 +4,29 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "babel-core": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.5.1",
-    "better-console": "^0.2.4",
-    "del": "^2.2.0",
-    "extend": "^3.0.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
     "good": "^6.5.0",
     "good-console": "^5.3.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-chmod": "^1.3.0",
-    "gulp-clone": "^1.0.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-copy": "0.0.2",
-    "gulp-dedupe": "0.0.2",
-    "gulp-flatten": "^0.2.0",
-    "gulp-header": "^1.7.1",
-    "gulp-help": "^1.6.1",
-    "gulp-if": "^2.0.0",
-    "gulp-less": "^3.0.5",
-    "gulp-minify-css": "^1.2.3",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-rtlcss": "^0.1.4",
-    "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
+    "gutil": "^1.6.4",
     "handlebars": "^4.0.5",
     "hapi": "^13.0.0",
-    "hapi-react-views": "^5.0.2",
     "inert": "^3.2.0",
-    "map-stream": "0.0.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "require-dot-file": "^0.4.0",
-    "run-sequence": "^1.1.5",
+    "reactify": "^1.1.1",
     "semantic-ui": "^2.1.8",
+    "vinyl-source-stream": "^1.1.0",
     "vision": "^4.0.1",
-    "yamljs": "^0.2.4"
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -55,8 +34,5 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
-  }
+  "devDependencies": {}
 }
